fix: ajustando parametros

--- a/EV_Telemetry_Simulator_&_Spark_Pipeline_(Colab_Kafka_Mongo).ipynb
+++ b/EV_Telemetry_Simulator_&_Spark_Pipeline_(Colab_Kafka_Mongo).ipynb
@@ -197,7 +197,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XNyult3tOEGi",
-        "outputId": "7dbd91b4-b66b-418c-affe-a7120095dcf6"
+        "outputId": "d527a125-73c1-42a9-b35d-ee52e89e78fa"
       },
       "execution_count": 2,
       "outputs": [
@@ -206,7 +206,7 @@
           "name": "stdout",
           "text": [
             ">> tentando https://fastdl.mongodb.org/linux/mongodb-linux-x86_64-ubuntu2204-7.0.14.tgz\n",
-            "19448 /content/mongodb/mongod --dbpath /content/mongodb/data --bind_ip 127.0.0.1 --port 27017 --logpath /content/mongodb/log/mongod.log --wiredTigerCacheSizeGB 0.25\n",
+            "4041 /content/mongodb/mongod --dbpath /content/mongodb/data --bind_ip 127.0.0.1 --port 27017 --logpath /content/mongodb/log/mongod.log --wiredTigerCacheSizeGB 0.25\n",
             "✅ mongod ativo em 127.0.0.1:27017\n"
           ]
         }
@@ -226,7 +226,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fE5255IEOLHf",
-        "outputId": "304c53a9-8d20-42c4-c767-37a7dd79d7cc"
+        "outputId": "92aa886d-4406-4c25-d8f9-30ee59f54f84"
       },
       "execution_count": 3,
       "outputs": [
@@ -249,7 +249,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nEo213LUOw7U",
-        "outputId": "4fbbf4ba-29c7-49ef-f240-6ea6ad0fb893"
+        "outputId": "c4fe49f8-3b3e-4a1e-993b-1d32caed67f2"
       },
       "execution_count": 4,
       "outputs": [
@@ -767,9 +767,22 @@
     {
       "cell_type": "code",
       "source": [
+        "v = 10\n",
+        "hz = 1\n",
+        "seg = 60"
+      ],
+      "metadata": {
+        "id": "yrqts5EEnHaq"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "simular_frota(\n",
-        "    vehicles=20, hz=2, duration=60,\n",
-        "    sink=\"file\", file_path=\"out/telemetria/ev.jsonl\",\n",
+        "    vehicles=v, hz=hz, duration=seg, seed=42,\n",
+        "    sink=\"file\", file_path=\"simulation_output/telemetria.jsonl\",\n",
         "    alert_threshold=60,\n",
         "    enable_mongo_alerts=True,\n",
         "    mongo_uri=\"mongodb://127.0.0.1:27017\",\n",
@@ -781,7 +794,7 @@
       "metadata": {
         "id": "HFq4umlKL8pt"
       },
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -809,20 +822,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "T2PyJ16aORVM",
-        "outputId": "93a7e3c7-3904-4d71-d813-abd3dc24f756"
+        "outputId": "4900e214-66c3-4b48-cbbf-3593bd5b1f2b"
       },
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Total de alertas: 840\n",
-            "{'ts': '2025-08-24T23:10:49.963275+00:00', 'vehicle_id': 'EV-00019', 'soc_pct': 47.16}\n",
-            "{'ts': '2025-08-24T23:10:49.962432+00:00', 'vehicle_id': 'EV-00016', 'soc_pct': 5.29}\n",
-            "{'ts': '2025-08-24T23:10:49.961572+00:00', 'vehicle_id': 'EV-00014', 'soc_pct': 56.66}\n",
-            "{'ts': '2025-08-24T23:10:49.959631+00:00', 'vehicle_id': 'EV-00001', 'soc_pct': 54.29}\n",
-            "{'ts': '2025-08-24T23:10:49.463072+00:00', 'vehicle_id': 'EV-00019', 'soc_pct': 47.16}\n"
+            "Total de alertas: 908\n",
+            "{'ts': '2025-08-25T00:28:54.376294+00:00', 'vehicle_id': 'EV-00008', 'soc_pct': 51.08}\n",
+            "{'ts': '2025-08-25T00:28:54.374381+00:00', 'vehicle_id': 'EV-00005', 'soc_pct': 48.68}\n",
+            "{'ts': '2025-08-25T00:28:53.375503+00:00', 'vehicle_id': 'EV-00008', 'soc_pct': 51.08}\n",
+            "{'ts': '2025-08-25T00:28:53.374042+00:00', 'vehicle_id': 'EV-00005', 'soc_pct': 48.68}\n",
+            "{'ts': '2025-08-25T00:28:52.375275+00:00', 'vehicle_id': 'EV-00008', 'soc_pct': 51.08}\n"
           ]
         }
       ]
@@ -1486,7 +1499,7 @@
       "metadata": {
         "id": "MqxnG8-av0tz"
       },
-      "execution_count": 22,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -1510,7 +1523,7 @@
       "metadata": {
         "id": "BYOGH00vu_RF"
       },
-      "execution_count": 23,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -1545,9 +1558,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bAHOEh2LvXBB",
-        "outputId": "46f1ddd3-56f8-485c-8a9a-145a512fb25d"
+        "outputId": "c6963876-bcde-441e-ffe8-10648d7753fa"
       },
-      "execution_count": 27,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -1608,7 +1621,7 @@
             " |-- battery_temp_band: string (nullable = false)\n",
             " |-- vehicle_ts_key: string (nullable = false)\n",
             "\n",
-            "{'total_input_rows': 600, 'clean_rows': 120, 'quarantine_rows': 480, 'pct_clean': 20.0, 'pct_quarantine': 80.0, 'low_soc_rows': 0}\n"
+            "{'total_input_rows': 2845, 'clean_rows': 747, 'quarantine_rows': 2098, 'pct_clean': 26.256590509666083, 'pct_quarantine': 73.74340949033392, 'low_soc_rows': 104}\n"
           ]
         }
       ]
@@ -1642,21 +1655,23 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cw5Ll6ZbY2_H",
-        "outputId": "cfa3e54d-48f4-4ff9-962d-9a332b8aeaa5"
+        "outputId": "3c020766-bbff-45da-d3ef-e6699c0fc873"
       },
-      "execution_count": 28,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "== pipeline_runs ==\n",
-            "{'job_name': 'EV_Telemetry_Batch', 'job_start_utc': '2025-08-24T23:24:20.063960+00:00', 'records_clean': 120, 'low_soc_rows': 0}\n",
+            "{'job_name': 'EV_Telemetry_Batch', 'job_start_utc': '2025-08-25T00:30:58.820313+00:00', 'records_clean': 747, 'low_soc_rows': 104}\n",
             "\n",
             "== ev_metrics_daily ==\n",
-            "{'vehicle_id': 'EV-00009', 'event_date': '2025-08-24', 'rows': 60, 'soc_min': 67.29, 'soc_p50': 67.31, 'soc_max': 67.32, 'low_soc_cnt': 0}\n",
-            "{'vehicle_id': 'EV-00003', 'event_date': '2025-08-24', 'rows': 43, 'soc_min': 87.53, 'soc_p50': 87.53, 'soc_max': 87.54, 'low_soc_cnt': 0}\n",
-            "{'vehicle_id': 'EV-00008', 'event_date': '2025-08-24', 'rows': 17, 'soc_min': 91.29, 'soc_p50': 91.29, 'soc_max': 91.3, 'low_soc_cnt': 0}\n"
+            "{'vehicle_id': 'EV-00006', 'event_date': '2025-08-25', 'rows': 3, 'soc_min': 75.19, 'soc_p50': 75.19, 'soc_max': 75.19, 'low_soc_cnt': 0}\n",
+            "{'vehicle_id': 'EV-00018', 'event_date': '2025-08-25', 'rows': 94, 'soc_min': 85.54, 'soc_p50': 85.55, 'soc_max': 85.57, 'low_soc_cnt': 0}\n",
+            "{'vehicle_id': 'EV-00017', 'event_date': '2025-08-25', 'rows': 94, 'soc_min': 43.74, 'soc_p50': 43.75, 'soc_max': 43.76, 'low_soc_cnt': 94}\n",
+            "{'vehicle_id': 'EV-00020', 'event_date': '2025-08-25', 'rows': 94, 'soc_min': 86.05, 'soc_p50': 86.06, 'soc_max': 86.08, 'low_soc_cnt': 0}\n",
+            "{'vehicle_id': 'EV-00013', 'event_date': '2025-08-25', 'rows': 94, 'soc_min': 61.78, 'soc_p50': 61.79, 'soc_max': 61.8, 'low_soc_cnt': 0}\n"
           ]
         }
       ]
@@ -1686,7 +1701,7 @@
       "metadata": {
         "id": "9KT-T7Yp943d"
       },
-      "execution_count": 19,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -1708,9 +1723,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YYSJKuUESzR-",
-        "outputId": "4e321a14-ca17-4b9a-a665-58fa0fe96d10"
+        "outputId": "7d64db9c-ab0a-4fc5-be43-652d1fcb9527"
       },
-      "execution_count": 20,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -1818,9 +1833,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YJH_QEzgaaej",
-        "outputId": "478948a5-a268-4006-acac-16fc3f77c976"
+        "outputId": "456dba53-0edc-4b99-a482-5b8e3d83bf34"
       },
-      "execution_count": 30,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -1832,27 +1847,27 @@
             "['admin', 'config', 'local', 'telemetria']\n",
             "\n",
             "== Coleções em telemetria ==\n",
-            "['ev_alerts', 'pipeline_runs', 'ev_metrics_daily']\n",
+            "['pipeline_runs', 'ev_alerts', 'ev_metrics_daily']\n",
             "\n",
             "[pipeline_runs] total docs: 1\n",
-            "{'job_end_dt': datetime.datetime(2025, 8, 24, 23, 24, 28, 457000), 'metrics': {'total_input_rows': 600, 'clean_rows': 120, 'quarantine_rows': 480, 'pct_clean': 20.0, 'pct_quarantine': 80.0, 'low_soc_rows': 0}, 'job_name': 'EV_Telemetry_Batch', 'job_start_utc': '2025-08-24T23:24:20.063960+00:00', 'job_end_utc': '2025-08-24T23:24:28.457158+00:00', 'input_path': '/content/simulation_output/telemetria.jsonl', 'output_path': '/content/pipeline_output', 'read_format': 'json', 'mode': 'append', 'records_clean': 120, 'records_quarantine': 480, 'pct_clean': 20.0, 'pct_quarantine': 80.0, 'low_soc_rows': 0, 'spark_version': '3.5.1'}\n",
+            "{'job_end_dt': datetime.datetime(2025, 8, 25, 0, 31, 37, 567000), 'metrics': {'total_input_rows': 2845, 'clean_rows': 747, 'quarantine_rows': 2098, 'pct_clean': 26.256590509666083, 'pct_quarantine': 73.74340949033392, 'low_soc_rows': 104}, 'job_name': 'EV_Telemetry_Batch', 'job_start_utc': '2025-08-25T00:30:58.820313+00:00', 'job_end_utc': '2025-08-25T00:31:37.567410+00:00', 'input_path': '/content/simulation_output/telemetria.jsonl', 'output_path': '/content/pipeline_output', 'read_format': 'json', 'mode': 'append', 'records_clean': 747, 'records_quarantine': 2098, 'pct_clean': 26.256590509666083, 'pct_quarantine': 73.74340949033392, 'low_soc_rows': 104, 'spark_version': '3.5.1'}\n",
             "Índices:\n",
             " - _id_ {'_id': 1} \n",
             " - job_name_1_job_start_utc_-1 {'job_name': 1, 'job_start_utc': -1} \n",
             " - job_end_dt_1 {'job_end_dt': 1}  (TTL=2592000s)\n",
             "\n",
-            "[ev_metrics_daily] total docs: 3\n",
-            "{'vehicle_id': 'EV-00009', 'event_date': '2025-08-24', 'rows': 60, 'soc_min': 67.29, 'soc_p50': 67.31, 'soc_max': 67.32, 'low_soc_cnt': 0, 'speed_avg': 1.4210000000000003}\n",
-            "{'vehicle_id': 'EV-00003', 'event_date': '2025-08-24', 'rows': 43, 'soc_min': 87.53, 'soc_p50': 87.53, 'soc_max': 87.54, 'low_soc_cnt': 0, 'speed_avg': 10.673488372093024}\n",
-            "{'vehicle_id': 'EV-00008', 'event_date': '2025-08-24', 'rows': 17, 'soc_min': 91.29, 'soc_p50': 91.29, 'soc_max': 91.3, 'low_soc_cnt': 0, 'speed_avg': 13.1}\n",
+            "[ev_metrics_daily] total docs: 12\n",
+            "{'vehicle_id': 'EV-00020', 'event_date': '2025-08-25', 'rows': 94, 'soc_min': 86.05, 'soc_p50': 86.06, 'soc_max': 86.08, 'low_soc_cnt': 0, 'speed_avg': 14.300212765957447}\n",
+            "{'vehicle_id': 'EV-00017', 'event_date': '2025-08-25', 'rows': 94, 'soc_min': 43.74, 'soc_p50': 43.75, 'soc_max': 43.76, 'low_soc_cnt': 94, 'speed_avg': 1.3967021276595746}\n",
+            "{'vehicle_id': 'EV-00013', 'event_date': '2025-08-25', 'rows': 94, 'soc_min': 61.78, 'soc_p50': 61.79, 'soc_max': 61.8, 'low_soc_cnt': 0, 'speed_avg': 0.5828723404255319}\n",
             "Índices:\n",
             " - _id_ {'_id': 1} \n",
             " - vehicle_id_1_event_date_-1 {'vehicle_id': 1, 'event_date': -1} \n",
             "\n",
-            "[ev_alerts] total docs: 840\n",
-            "{'ts': '2025-08-24T23:02:37.636766+00:00', 'ts_dt': datetime.datetime(2025, 8, 24, 23, 2, 37, 636000), 'vehicle_id': 'EV-00002', 'soc_pct': 35.45, 'power_kw': 2.778, 'latitude': -23.488523, 'longitude': -46.615139, 'fault_code': None, 'payload': {'schema_version': '1.0.0', 'vehicle_id': 'EV-00002', 'timestamp': '2025-08-24T23:02:37.636766+00:00', 'metrics': {'soc_pct': 35.45, 'pack_voltage_v': 331.61, 'pack_current_a': 8.79, 'power_kw': 2.778, 'battery_temp_c': 29.58, 'motor_temp_c': 28.6, 'coolant_temp_c': 22.2, 'tyre_pressure_kpa': [210.1, 227.8, 220.9, 212.6], 'speed_kph': 24.39, 'odometer_km': 37571.856, 'latitude': -23.488523, 'longitude': -46.615139, 'heading_deg': 188.7, 'ambient_temp_c': 19.7, 'is_charging': False, 'charge_power_kw': 0.0, 'health_score': 0.983}, 'events': {'fault_code': None}}}\n",
-            "{'ts': '2025-08-24T23:02:37.637901+00:00', 'ts_dt': datetime.datetime(2025, 8, 24, 23, 2, 37, 637000), 'vehicle_id': 'EV-00003', 'soc_pct': 59.52, 'power_kw': 1.126, 'latitude': -23.49942, 'longitude': -46.58732, 'fault_code': None, 'payload': {'schema_version': '1.0.0', 'vehicle_id': 'EV-00003', 'timestamp': '2025-08-24T23:02:37.637901+00:00', 'metrics': {'soc_pct': 59.52, 'pack_voltage_v': 390.57, 'pack_current_a': 3.03, 'power_kw': 1.126, 'battery_temp_c': 26.97, 'motor_temp_c': 22.3, 'coolant_temp_c': 19.94, 'tyre_pressure_kpa': [219.3, 239.4, 237.5, 234.4], 'speed_kph': 14.36, 'odometer_km': 70999.808, 'latitude': -23.49942, 'longitude': -46.58732, 'heading_deg': 320.3, 'ambient_temp_c': 26.9, 'is_charging': False, 'charge_power_kw': 0.0, 'health_score': 0.96}, 'events': {'fault_code': None}}}\n",
-            "{'ts': '2025-08-24T23:02:37.639557+00:00', 'ts_dt': datetime.datetime(2025, 8, 24, 23, 2, 37, 639000), 'vehicle_id': 'EV-00013', 'soc_pct': 51.65, 'power_kw': 1.804, 'latitude': -23.871764, 'longitude': -46.129428, 'fault_code': None, 'payload': {'schema_version': '1.0.0', 'vehicle_id': 'EV-00013', 'timestamp': '2025-08-24T23:02:37.639557+00:00', 'metrics': {'soc_pct': 51.65, 'pack_voltage_v': 337.32, 'pack_current_a': 5.62, 'power_kw': 1.804, 'battery_temp_c': 25.24, 'motor_temp_c': 33.55, 'coolant_temp_c': 23.09, 'tyre_pressure_kpa': [219.8, 220.6, 231.4, 233.4], 'speed_kph': 14.45, 'odometer_km': 43764.989, 'latitude': -23.871764, 'longitude': -46.129428, 'heading_deg': 148.1, 'ambient_temp_c': 20.1, 'is_charging': False, 'charge_power_kw': 0.0, 'health_score': 0.935}, 'events': {'fault_code': None}}}\n",
+            "[ev_alerts] total docs: 908\n",
+            "{'ts': '2025-08-25T00:16:25.857226+00:00', 'ts_dt': datetime.datetime(2025, 8, 25, 0, 16, 25, 857000), 'vehicle_id': 'EV-00008', 'soc_pct': 47.15, 'power_kw': 2.406, 'latitude': -23.884088, 'longitude': -46.840237, 'fault_code': None, 'payload': {'schema_version': '1.0.0', 'vehicle_id': 'EV-00008', 'timestamp': '2025-08-25T00:16:25.857226+00:00', 'metrics': {'soc_pct': 47.15, 'pack_voltage_v': 352.07, 'pack_current_a': 7.18, 'power_kw': 2.406, 'battery_temp_c': 23.93, 'motor_temp_c': 25.88, 'coolant_temp_c': 26.9, 'tyre_pressure_kpa': [228.9, 237.9, 236.4, 215.3], 'speed_kph': 18.3, 'odometer_km': 80956.705, 'latitude': -23.884088, 'longitude': -46.840237, 'heading_deg': 266.6, 'ambient_temp_c': 26.8, 'is_charging': False, 'charge_power_kw': 0.0, 'health_score': 0.987}, 'events': {'fault_code': None}}}\n",
+            "{'ts': '2025-08-25T00:16:25.859102+00:00', 'ts_dt': datetime.datetime(2025, 8, 25, 0, 16, 25, 859000), 'vehicle_id': 'EV-00014', 'soc_pct': 42.64, 'power_kw': 1.713, 'latitude': -23.597939, 'longitude': -46.08825, 'fault_code': None, 'payload': {'schema_version': '1.0.0', 'vehicle_id': 'EV-00014', 'timestamp': '2025-08-25T00:16:25.859102+00:00', 'metrics': {'soc_pct': 42.64, 'pack_voltage_v': 362.96, 'pack_current_a': 4.95, 'power_kw': 1.713, 'battery_temp_c': 21.93, 'motor_temp_c': 29.99, 'coolant_temp_c': 19.74, 'tyre_pressure_kpa': [236.8, 223.3, 226.9, 225.1], 'speed_kph': 16.95, 'odometer_km': 40424.061, 'latitude': -23.597939, 'longitude': -46.08825, 'heading_deg': 209.6, 'ambient_temp_c': 29.3, 'is_charging': False, 'charge_power_kw': 0.0, 'health_score': 0.934}, 'events': {'fault_code': None}}}\n",
+            "{'ts': '2025-08-25T00:16:25.860325+00:00', 'ts_dt': datetime.datetime(2025, 8, 25, 0, 16, 25, 860000), 'vehicle_id': 'EV-00016', 'soc_pct': 57.74, 'power_kw': 3.809, 'latitude': -23.591302, 'longitude': -46.19727, 'fault_code': None, 'payload': {'schema_version': '1.0.0', 'vehicle_id': 'EV-00016', 'timestamp': '2025-08-25T00:16:25.860325+00:00', 'metrics': {'soc_pct': 57.74, 'pack_voltage_v': 345.91, 'pack_current_a': 11.56, 'power_kw': 3.809, 'battery_temp_c': 28.13, 'motor_temp_c': 23.67, 'coolant_temp_c': 18.25, 'tyre_pressure_kpa': [228.7, 224.0, 233.1, 240.0], 'speed_kph': 27.42, 'odometer_km': 76583.61, 'latitude': -23.591302, 'longitude': -46.19727, 'heading_deg': 255.3, 'ambient_temp_c': 29.6, 'is_charging': False, 'charge_power_kw': 0.0, 'health_score': 0.935}, 'events': {'fault_code': None}}}\n",
             "Índices:\n",
             " - _id_ {'_id': 1} \n",
             " - vehicle_id_1_ts_dt_-1 {'vehicle_id': 1, 'ts_dt': -1} \n",
